--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Express and Webpack App</title>
+    <title>Heroes</title>
     <link rel="shortcut icon" href="#" />
   </head>
   <body>
